--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <div class="backgroundColor"></div>
 
   <div class="pokedexHead">Pokedex</div>
-  <div class="pokemonImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="pokemon picture" width="250" height="100"></div>
+  <div class="pokemonImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="pokemon picture"></div>
 
   <div class="grid">
     <div class="column">
-      <div id="rectangle1" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture" width="100" height="100">
+      <div id="rectangle1" class="pokemon">
+        <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
         <div class="name">bulbasaur</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
           <div>bulbasaur#1</div>
@@ -70,8 +70,8 @@
         </div>
       </div>
 
-      <div id="rectangle2" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/2.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle2" class="pokemon">
+        <img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
         <div class="name">ivysaur</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
           <div>ivysaur#2</div>
@@ -122,8 +122,8 @@
         </div>
       </div>
 
-      <div id="rectangle3" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/3.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle3" class="pokemon">
+        <img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
         <div class="name">venusaur</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
           <div>venusaur#3</div>
@@ -174,8 +174,8 @@
         </div>
       </div>
 
-      <div id="rectangle4" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/4.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle4" class="pokemon">
+        <img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
         <div class="name">charmander</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
           <div>charmander#4</div>
@@ -225,8 +225,8 @@
         </div>
       </div>
 
-      <div id="rectangle5" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/5.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle5" class="pokemon">
+        <img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
         <div class="name">charmeleon</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
           <div>charmeleon#5</div>
@@ -276,8 +276,8 @@
         </div>
       </div>
 
-      <div id="rectangle6" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/6.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle6" class="pokemon">
+        <img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
         <div class="name">charizard</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
           <div>charizard#6</div>
@@ -328,8 +328,8 @@
         </div>
       </div>
 
-      <div id="rectangle7" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/7.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle7" class="pokemon">
+        <img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
         <div class="name">squirtle</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
           <div>squirtle#7</div>
@@ -379,8 +379,8 @@
         </div>
       </div>
 
-      <div id="rectangle8" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/8.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle8" class="pokemon">
+        <img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
         <div class="name">wartortle</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
           <div>wartortle#8</div>
@@ -430,8 +430,8 @@
         </div>
       </div>
 
-      <div id="rectangle9" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/9.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle9" class="pokemon">
+        <img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
         <div class="name">blastoise</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
           <div>blastoise#9</div>
@@ -481,8 +481,8 @@
         </div>
       </div>
 
-      <div id="rectangle10" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/10.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle10" class="pokemon">
+        <img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
         <div class="name">caterpie</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
           <div>caterpie#10</div>
@@ -532,8 +532,8 @@
         </div>
       </div>
 
-      <div id="rectangle11" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/11.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle11" class="pokemon">
+        <img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
         <div class="name">metapod</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
           <div>metapod#11</div>
@@ -583,8 +583,8 @@
         </div>
       </div>
 
-      <div id="rectangle12" class="rectangle pokemon">
-        <img src="http://pokeapi.co/media/img/12.png" width="100" height="100" alt="pokemon picture">
+      <div id="rectangle12" class="pokemon">
+        <img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
         <div class="name">butterfree</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
           <div>butterfree#12</div>
@@ -641,7 +641,7 @@
 
     <div class="column">
       <div class="pokemonProfile">
-        <div id="rectangle-profile" class="pokemon"></div>
+        <div id="rectangle-profile"></div>
       </div>
     </div>
   </div>
