finish fluid layout

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="javascripts/pokemon.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheets/pokemon.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/adaptive-pokemon.css">
 
   <title>Pokemon</title>
 </head>
@@ -17,7 +18,7 @@
   <div class="pokemonImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="pokemon picture"></div>
 
   <div class="grid">
-    <div class="column">
+    <div class="column-left">
       <div id="rectangle1" class="pokemon">
         <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
         <div class="name">bulbasaur</div>
@@ -178,7 +179,7 @@
         <img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
         <div class="name">charmander</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
-          <div>charmander#4</div>
+          <div>charmander #004</div>
           <table>
             <tbody>
               <tr>
@@ -639,7 +640,7 @@
 
     </div>
 
-    <div class="column">
+    <div class="column-right">
       <div class="pokemonProfile">
         <div id="rectangle-profile"></div>
       </div>
