--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
         <div class="name">bulbasaur</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
-          <div>bulbasaur#1</div>
+          <div>bulbasaur #001</div>
           <table>
             <tbody>
               <tr>
@@ -75,7 +75,7 @@
         <img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
         <div class="name">ivysaur</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
-          <div>ivysaur#2</div>
+          <div>ivysaur #002</div>
           <table>
             <tbody>
               <tr>
@@ -127,7 +127,7 @@
         <img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
         <div class="name">venusaur</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
-          <div>venusaur#3</div>
+          <div>venusaur #003</div>
           <table>
             <tbody>
               <tr>
@@ -230,7 +230,7 @@
         <img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
         <div class="name">charmeleon</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
-          <div>charmeleon#5</div>
+          <div>charmeleon #005</div>
           <table>
             <tbody>
               <tr>
@@ -281,7 +281,7 @@
         <img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
         <div class="name">charizard</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
-          <div>charizard#6</div>
+          <div>charizard #006</div>
           <table>
             <tbody>
               <tr>
@@ -333,7 +333,7 @@
         <img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
         <div class="name">squirtle</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
-          <div>squirtle#7</div>
+          <div>squirtle #007</div>
           <table>
             <tbody>
               <tr>
@@ -384,7 +384,7 @@
         <img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
         <div class="name">wartortle</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
-          <div>wartortle#8</div>
+          <div>wartortle #008</div>
           <table>
             <tbody>
               <tr>
@@ -435,7 +435,7 @@
         <img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
         <div class="name">blastoise</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
-          <div>blastoise#9</div>
+          <div>blastoise #009</div>
           <table>
             <tbody>
               <tr>
@@ -486,7 +486,7 @@
         <img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
         <div class="name">caterpie</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
-          <div>caterpie#10</div>
+          <div>caterpie #010</div>
           <table>
             <tbody>
               <tr>
@@ -537,7 +537,7 @@
         <img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
         <div class="name">metapod</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
-          <div>metapod#11</div>
+          <div>metapod #011</div>
           <table>
             <tbody>
               <tr>
@@ -588,7 +588,7 @@
         <img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
         <div class="name">butterfree</div>
         <div class="hidden-info"><img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
-          <div>butterfree#12</div>
+          <div>butterfree #012</div>
           <table>
             <tbody>
               <tr>
@@ -644,6 +644,13 @@
       <div class="pokemonProfile">
         <div id="rectangle-profile"></div>
       </div>
+    </div>
+  </div>
+  <div class="hidden-info" id="pokemon-template">
+    <div id="rectangle1" class="pokemon">
+      <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
+      <div class="name"></div><div class="abilities" id="ability-1"></div>
+      <div class="hidden-info"></div>
     </div>
   </div>
 
