hide profile button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <div id="rectangle1" class="pokemon">
         <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
         <div class="name">bulbasaur</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
           <div>bulbasaur #001</div>
           <table>
             <tbody>
@@ -74,7 +76,9 @@
       <div id="rectangle2" class="pokemon">
         <img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
         <div class="name">ivysaur</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
           <div>ivysaur #002</div>
           <table>
             <tbody>
@@ -126,7 +130,9 @@
       <div id="rectangle3" class="pokemon">
         <img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
         <div class="name">venusaur</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
           <div>venusaur #003</div>
           <table>
             <tbody>
@@ -178,7 +184,9 @@
       <div id="rectangle4" class="pokemon">
         <img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
         <div class="name">charmander</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
           <div>charmander #004</div>
           <table>
             <tbody>
@@ -229,7 +237,9 @@
       <div id="rectangle5" class="pokemon">
         <img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
         <div class="name">charmeleon</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
           <div>charmeleon #005</div>
           <table>
             <tbody>
@@ -280,7 +290,9 @@
       <div id="rectangle6" class="pokemon">
         <img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
         <div class="name">charizard</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
           <div>charizard #006</div>
           <table>
             <tbody>
@@ -332,7 +344,9 @@
       <div id="rectangle7" class="pokemon">
         <img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
         <div class="name">squirtle</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
           <div>squirtle #007</div>
           <table>
             <tbody>
@@ -383,7 +397,9 @@
       <div id="rectangle8" class="pokemon">
         <img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
         <div class="name">wartortle</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
           <div>wartortle #008</div>
           <table>
             <tbody>
@@ -434,7 +450,9 @@
       <div id="rectangle9" class="pokemon">
         <img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
         <div class="name">blastoise</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
           <div>blastoise #009</div>
           <table>
             <tbody>
@@ -485,7 +503,9 @@
       <div id="rectangle10" class="pokemon">
         <img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
         <div class="name">caterpie</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
           <div>caterpie #010</div>
           <table>
             <tbody>
@@ -536,7 +556,9 @@
       <div id="rectangle11" class="pokemon">
         <img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
         <div class="name">metapod</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
           <div>metapod #011</div>
           <table>
             <tbody>
@@ -587,7 +609,9 @@
       <div id="rectangle12" class="pokemon">
         <img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
         <div class="name">butterfree</div>
-        <div class="hidden-info"><img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
+        <div class="hidden-info">
+          <div class="hide-profile"></div>
+          <img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
           <div>butterfree #012</div>
           <table>
             <tbody>
@@ -642,7 +666,9 @@
 
     <div class="column-right">
       <div class="pokemonProfile">
-        <div id="rectangle-profile"></div>
+        <div id="rectangle-profile">
+          <div class="hide-profile"></div>
+        </div>
       </div>
     </div>
   </div>
