--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
         </div>
       </div>
 
-      <div onclick="displ()" id="LoadMore">LOAD MORE</div>
+      <div id="load-more">LOAD MORE</div>
 
     </div>
 
