--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   <div class="grid">
     <div class="column-left">
       <div id="rectangle1" class="pokemon">
-        <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
+        <img src="images/1.png" alt="pokemon picture">
         <div class="name">bulbasaur</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/1.png" alt="pokemon picture">
+          <img src="images/1.png" alt="pokemon picture">
           <div>bulbasaur #001</div>
           <table>
             <tbody>
@@ -74,11 +74,11 @@
       </div>
 
       <div id="rectangle2" class="pokemon">
-        <img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
+        <img src="images/2.png" alt="pokemon picture">
         <div class="name">ivysaur</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/2.png" alt="pokemon picture">
+          <img src="images/2.png" alt="pokemon picture">
           <div>ivysaur #002</div>
           <table>
             <tbody>
@@ -128,11 +128,11 @@
       </div>
 
       <div id="rectangle3" class="pokemon">
-        <img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
+        <img src="images/3.png" alt="pokemon picture">
         <div class="name">venusaur</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/3.png" alt="pokemon picture">
+          <img src="images/3.png" alt="pokemon picture">
           <div>venusaur #003</div>
           <table>
             <tbody>
@@ -182,11 +182,11 @@
       </div>
 
       <div id="rectangle4" class="pokemon">
-        <img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
+        <img src="images/4.png" alt="pokemon picture">
         <div class="name">charmander</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/4.png" alt="pokemon picture">
+          <img src="images/4.png" alt="pokemon picture">
           <div>charmander #004</div>
           <table>
             <tbody>
@@ -235,11 +235,11 @@
       </div>
 
       <div id="rectangle5" class="pokemon">
-        <img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
+        <img src="images/5.png" alt="pokemon picture">
         <div class="name">charmeleon</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/5.png" alt="pokemon picture">
+          <img src="images/5.png" alt="pokemon picture">
           <div>charmeleon #005</div>
           <table>
             <tbody>
@@ -288,11 +288,11 @@
       </div>
 
       <div id="rectangle6" class="pokemon">
-        <img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
+        <img src="images/6.png" alt="pokemon picture">
         <div class="name">charizard</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/6.png" alt="pokemon picture">
+          <img src="images/6.png" alt="pokemon picture">
           <div>charizard #006</div>
           <table>
             <tbody>
@@ -342,11 +342,11 @@
       </div>
 
       <div id="rectangle7" class="pokemon">
-        <img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
+        <img src="images/7.png" alt="pokemon picture">
         <div class="name">squirtle</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/7.png" alt="pokemon picture">
+          <img src="images/7.png" alt="pokemon picture">
           <div>squirtle #007</div>
           <table>
             <tbody>
@@ -395,11 +395,11 @@
       </div>
 
       <div id="rectangle8" class="pokemon">
-        <img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
+        <img src="images/8.png" alt="pokemon picture">
         <div class="name">wartortle</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/8.png" alt="pokemon picture">
+          <img src="images/8.png" alt="pokemon picture">
           <div>wartortle #008</div>
           <table>
             <tbody>
@@ -448,11 +448,11 @@
       </div>
 
       <div id="rectangle9" class="pokemon">
-        <img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
+        <img src="images/9.png" alt="pokemon picture">
         <div class="name">blastoise</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/9.png" alt="pokemon picture">
+          <img src="images/9.png" alt="pokemon picture">
           <div>blastoise #009</div>
           <table>
             <tbody>
@@ -501,11 +501,11 @@
       </div>
 
       <div id="rectangle10" class="pokemon">
-        <img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
+        <img src="images/10.png" alt="pokemon picture">
         <div class="name">caterpie</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/10.png" alt="pokemon picture">
+          <img src="images/10.png" alt="pokemon picture">
           <div>caterpie #010</div>
           <table>
             <tbody>
@@ -554,11 +554,11 @@
       </div>
 
       <div id="rectangle11" class="pokemon">
-        <img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
+        <img src="images/11.png" alt="pokemon picture">
         <div class="name">metapod</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/11.png" alt="pokemon picture">
+          <img src="images/11.png" alt="pokemon picture">
           <div>metapod #011</div>
           <table>
             <tbody>
@@ -607,11 +607,11 @@
       </div>
 
       <div id="rectangle12" class="pokemon">
-        <img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
+        <img src="images/12.png" alt="pokemon picture">
         <div class="name">butterfree</div>
         <div class="hidden-info">
           <div class="hide-profile"></div>
-          <img src="http://pokeapi.co/media/img/12.png" alt="pokemon picture">
+          <img src="images/12.png" alt="pokemon picture">
           <div>butterfree #012</div>
           <table>
             <tbody>
